Web UI improvements before rewrite
